# mcu-comms

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/esp32c3/: .gitignore  Cargo.toml
examples/esp32c3/src/: encryption.rs  util.rs
mcu-comms/: Cargo.toml  README.md  SECURITY.md
mcu-comms-macros/: Cargo.toml  README.md
mcu-comms-macros/src/: lib.rs
mcu-comms/src/: aesccm.rs  lib.rs  payload_size.rs  peer_channel.rs
mcu-comms/tests/: epoch_desync.rs  protocol_ctl.rs
mcu-comms/tests/common/: mod.rs
src/: aesccm.rs  lib.rs
