[package]
name = "mcu-comms"
version = "0.4.0"
authors = ["SimonDaign0"]
edition = "2024"
description = "A lightweight, no_std communication framing and packet encryption utility library designed for resource-constrained microcontrollers."
documentation = "https://docs.rs/mcu-comms"
repository = "https://github.com/SimonDaign0/mcu-comms"
readme = "README.md"
license = "Apache-2.0"
keywords = ["mcu", "aes", "ccm", "cryptography", "hal"]
categories = ["embedded", "cryptography", "no-std"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0" }
mcu-comms-macros = "0.2.0"
