[package]
name = "mcu-comms"
version = "0.5.0"
authors = ["SimonDaign0"]
edition = "2024"
description = "A lightweight, no_std communication framing and packet encryption utility library designed for resource-constrained microcontrollers."
documentation = "https://docs.rs/mcu-comms"
repository = "https://github.com/SimonDaign0/mcu-comms"
readme = "README.md"
license = "Apache-2.0"
keywords = ["mcu", "aes", "ccm", "cryptography", "hal"]
categories = ["embedded", "cryptography", "no-std"]

[dependencies]
mcu-comms-macros = "0.3.0"

serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0" }

sha2 = { version = "0.11.0", default-features = false }
hkdf = { version = "0.13.0", default-features = false }


[features]
test-util = []
[dev-dependencies]
mcu-comms = { path = ".", features = ["test-util"] }
aes = "0.9.1"
