[[bin]]
name = "encryption"
path = "src/encryption.rs"

[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
mcu-comms = { path = "../../mcu-comms/" }

esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3", "unstable"] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.19.0", features = [
  "defmt",
  "esp32c3",
  "panic-handler",
] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32c3"] }
heapless = "0.7.17"

serde = { version = "1.0.228", default-features = false, features = ["derive"] }

[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
